# ROSStingrayRobot

./: README.md  ROS.gitignore  addressRef.md  cribnotes.md  scrum.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/action_server/: defActionFeedback.h  defActionGoal.h  defFeedback.h  defGoal.h  defResult.h
devel/include/object_detection/: GoalPos.h  GoalPositions.h  Localization.h  LocalizationRequest.h  LocalizationResponse.h
devel/lib/action_client/: action_client_node
devel/lib/action_server/: action_server_node
devel/lib/pkgconfig/: action_client.pc  action_server.pc  realsense2_camera.pc  realsense2_description.pc
devel/share/action_client/cmake/: action_client-msg-extras.cmake  action_client-msg-paths.cmake  action_clientConfig.cmake
devel/share/action_client/msg/: defActionResult.msg
devel/share/action_server/cmake/: action_server-msg-extras.cmake  action_server-msg-paths.cmake  action_serverConfig.cmake
devel/share/action_server/msg/: defAction.msg  defActionFeedback.msg  (+1 more)
install/: _setup_util.py  setup.sh
install/include/action_client/: defAction.h  defActionFeedback.h  defActionGoal.h  defActionResult.h  defFeedback.h  defGoal.h  defResult.h
install/include/action_server/: defAction.h  defActionResult.h
install/include/safety_action_client/: defAction.h  defActionFeedback.h  defActionGoal.h  defActionResult.h  defFeedback.h  defGoal.h  defResult.h
install/share/action_client/: package.xml
install/share/left_fin_actuator/: package.xml
install/share/safety_action_client/: package.xml
screenAutomation/: screenFullLaunch.sh  screenObjDetLaunch.sh  screenlaunchjetsonrc  setup.sh  testSc.sh
src/action_client/: CMakeLists.txt
src/action_client/launch/: goal_client.launch
src/action_client/src/: .action_client.cpp.swp  action_client.cpp
src/action_client/testing/: testing_action_server.py
src/action_server/: CMakeLists.txt  package.xml
src/action_server/launch/: as_launch.launch
src/action_server/scripts/: .test_left_fin_actuator.py.swp  test_left_fin_actuator.py
src/action_server/src/: .action_server.cpp.swp  action_server.cpp
src/demo_left_fin_actuator/: cribnotes.md  package.xml
src/demo_left_fin_actuator/src/: actuator.cpp
src/demo_right_fin_actuator/: CMakeLists.txt  package.xml
src/demo_right_fin_actuator/demo_right_fin_actuator/: CMakeLists.txt
src/demo_right_fin_actuator/launch/: demo_right_fin.launch
src/demo_right_fin_actuator/src/: ActuatorMultiWave.h  Servo.cpp  actuator.cpp  oldActuatorMultiWave.txt
src/depth_control/: CMakeLists.txt  package.xml
src/depth_control/scripts/: depth_controller_untested.py  testSunfounder.py
src/fin_calibration/: CMakeLists.txt  package.xml
src/fin_calibration/launch/: fin_calibration.launch
src/fin_calibration/src/: ActuatorMultiWave.h  calibration.cpp
src/left_fin_actuator/: CMakeLists.txt
src/left_fin_actuator/launch/: left_fin.launch
src/left_fin_actuator/src/: .actuator.cpp.swp  ActuatorMultiWave.h  PCA9685.h  actuator.cpp
src/live_stream/: CMakeLists.txt  package.xml
src/live_stream/host/: viewerzmq.py
src/live_stream/launch/: live_stream.launch
src/live_stream/scripts/: zmq_live_stream_client.py
src/object_detection/: CMakeLists.txt  package.xml
src/object_detection/scripts/: object_detection_node.py
src/object_detection/srv/: Localization.srv
src/object_detection/testing/: askService.py
src/object_detection/weights/: bestNlarge.pt
src/py_sensors/: CMakeLists.txt  package.xml
src/py_sensors/scripts/: bmp180GetDataOld.py  bmp180Sensor.py  bmp180Test.py  ina_sensor.py  py_sensors.py  testgrovejetson.py
src/right_fin_actuator/: CMakeLists.txt  package.xml
src/right_fin_actuator/launch/: right_fin.launch
src/right_fin_actuator/src/: ActuatorMultiWave.h  PCA9685.cpp  Servo.cpp  Servo.h  actuator.cpp
src/safety_action_client/: CMakeLists.txt
src/safety_action_client/launch/: sac_launch.launch
src/safety_action_client/src/: safety_action_client.cpp
src/stingray_obstacle_avoidance/: CMakeLists.txt  package.xml
src/stingray_obstacle_avoidance/scripts/: ray_obstacle_avoidance.py  ray_obstacle_avoidance_premapped.py
(+165 files in other folders)
